--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -99,6 +99,14 @@
             </svg>
         </div>
     </div>
+
+    <div class="container" id="id_loading_spinner" style="display: none">
+        <div class="d-flex flex-row mx-auto flex-grow-1 justify-content-center">
+            <div class="spinner-border text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+    </div>
     <!--*******************
         Preloader end
     ********************-->
@@ -458,6 +466,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js" integrity="sha512-TDKKr+IvoqZnPzc3l35hdjpHD0m+b2EC2SrLEgKDRWpxf2rFCxemkgvJ5kfU48ip+Y+m2XVKyOCD85ybtlZDmw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/languages/kotlin.min.js" integrity="sha512-8aYTnyDstX39PHxorDD+6ROknf98Vqr5KTOjwRCl/442uAVKOpCJ5wY9I3VQ6y46rdDJKYBIglIfE2+GQk8U5Q==" crossorigin="anonymous"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
+    <script type="text/javascript">
+        function displayLoadingSpinner(isDisplayed){
+            var spinner = document.getElementById("id_loading_spinner")
+            if(isDisplayed){
+                spinner.style.display = "block"
+            }
+            else{
+                spinner.style.display = "none"
+            }
+        }
+    </script>
 
     <!-- Setup SOCKET for NOTIFICATIONS -->
     <!-- Originally from header.html -->
