--- a/post/templates/post/post_list_backup.html
+++ b/post/templates/post/post_list_backup.html
@@ -22,9 +22,10 @@
 </style>
 <div class="card">
     <div class="card-body">
-        <form action="#" class="form-profile">
+        <form method="POST" enctype="multipart/form-data" class="form-profile">
+            {% csrf_token %}
             <div class="form-group">
-                <textarea class="form-control" name="textarea" id="textarea" cols="30" rows="2" placeholder="Post a new message"></textarea>
+                <textarea class="form-control" name="body" id="textarea" cols="30" rows="2" placeholder="Post a new message"></textarea>
             </div>
             <div class="d-flex align-items-center">
                 <ul class="mb-0 form-profile__icons">
